Se realiza el esqueleto del formulario en el HTML

--- a/index.html
+++ b/index.html
@@ -12,9 +12,52 @@
     <title>Formulario</title>
 </head>
 <body>
-    <div>
-        
-    </div>
+    <form method="post" id="formBody">
+        <ul>
+            <!--Input Formulario-->
+            <li>
+                <label for="nameUser">Nombre del Usuario</label>
+            </li>
+            <li>
+                <label for="lastnameUser">Apellidos del Usuario</label>
+            </li>
+            <li>
+                <label for="rutUser">Rut o Run del Usuario</label>
+            </li>
+            <li>
+                <label for="emailUser">Email del Usuario</label>
+            </li>
+            <li>
+                <label for="phoneNumberUser">Número de Celular</label>
+            </li>
+
+            <!--Selecciones Formulario-->
+
+            <li>
+                <label for="langProgramming">Selecciona 1 o más lenguajes de programación de su interés</label>
+                <br>
+            </li>
+            <li>
+                <label for="yearsKnowledge">¿Cuantos años de experiencia laboral tiene?</label>
+                <br>
+            </li>
+            <li>
+                <label for="desPersonal">Una descripción breve acerca de usted</label>
+                <textarea id="desPersonal"></textarea>
+            </li>
+
+            <!--Botones Formulario-->
+            <ul>
+                <li class="btn">
+                    <button type="submit">Enviar Datos Usuario</button>
+                </li>
+                <li class="btn">
+                    <button type="reset">Limpiar Datos Usuario</button>
+                </li>
+            </ul>
+        </ul>
+
+    </form>
 
     <!--JavaScripts-->
     <script src="js/inicio.js" async defer></script>
