--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <!--Stylesheet-->
     <link rel="stylesheet" href="css/styles.css">
@@ -12,51 +12,95 @@
     <title>Formulario</title>
 </head>
 <body>
-    <form method="post" id="formBody">
-        <ul>
-            <!--Input Formulario-->
-            <li>
-                <label for="nameUser">Nombre del Usuario</label>
-            </li>
-            <li>
-                <label for="lastnameUser">Apellidos del Usuario</label>
-            </li>
-            <li>
-                <label for="rutUser">Rut o Run del Usuario</label>
-            </li>
-            <li>
-                <label for="emailUser">Email del Usuario</label>
-            </li>
-            <li>
-                <label for="phoneNumberUser">Número de Celular</label>
-            </li>
-
-            <!--Selecciones Formulario-->
-
-            <li>
-                <label for="langProgramming">Selecciona 1 o más lenguajes de programación de su interés</label>
-                <br>
-            </li>
-            <li>
-                <label for="yearsKnowledge">¿Cuantos años de experiencia laboral tiene?</label>
-                <br>
-            </li>
-            <li>
-                <label for="desPersonal">Una descripción breve acerca de usted</label>
-                <textarea id="desPersonal"></textarea>
-            </li>
-
-            <!--Botones Formulario-->
+    <span id="gracias"></span>
+    <form method="post" id="formBody" action="#">
+        <fieldset>
+            <legend>Formulario</legend>
             <ul>
-                <li class="btn">
-                    <button type="submit">Enviar Datos Usuario</button>
+                <!--Input Formulario-->
+                <li>
+                    <label for="nameUser">Nombre del Usuario</label>
+                    <input type="text" id="nameUser" required>
                 </li>
-                <li class="btn">
-                    <button type="reset">Limpiar Datos Usuario</button>
+                <li>
+                    <label for="lastnameUser">Apellidos del Usuario</label>
+                    <input type="text" id="lastnameUser" required>
                 </li>
-            </ul>
-        </ul>
+                <li>
+                    <label for="rutUser">Rut o Run del Usuario + Dígito Verificador</label>
+                    <input type="number" id="rutUser" max="99999999" required>
+                     - 
+                    <input type="text" id="dv" maxlength="1" required>
+                </li>
+                <li>
+                    <label for="emailUser">Email del Usuario</label>
+                    <input type="email" id="emailUser" required>
+                </li>
+                <li>
+                    <label for="phoneNumberUser">Número de Celular (Sin +569)</label>
+                    <input type="number" id="phoneNumberUser" max="99999999" required>
+                </li>
 
+                <!--Selecciones Formulario-->
+
+                <li>
+                    <label for="langProgramming">Selecciona 1 o más lenguajes de programación de su interés</label>
+                    <ul>
+                        <li><input type="checkbox" name="langProgramming" id="python" required><label>Python</label></li>
+                        <li><input type="checkbox" name="langProgramming" id="java"><label>Java</label></li>
+                        <li><input type="checkbox" name="langProgramming" id="type"><label>TypeScript</label></li>
+                        <li><input type="checkbox" name="langProgramming" id="php"><label>PHP</label></li>
+                        <li><input type="checkbox" name="langProgramming" id="c"><label>C#</label></li>
+                        <li><input type="checkbox" name="langProgramming" id="c++"><label>C++</label></li>
+                    </ul>
+                </li>
+                <li>
+                    <label for="knowledge">¿Cuál es su nivel de conocimiento en programación?</label>
+                    <br>
+                    <label>0%</label> 
+                    <input type="range" id="knowledge" list="marcas">
+                    <datalist id="marcas">
+                        <option value="0">
+                        <option value="10">
+                        <option value="20">
+                        <option value="30">
+                        <option value="40">
+                        <option value="50">
+                        <option value="60">
+                        <option value="70">
+                        <option value="80">
+                        <option value="90">
+                        <option value="100">
+                    </datalist>
+                    <label>100%</label> 
+                </li>
+                <li>
+                    <label for="yearsKnowledge">¿Cuantos años de experiencia laboral tiene?</label>
+                    <ul>
+                        <input type="radio" name="yearsKnowledge" id="uno" required><label></label>1
+                        <input type="radio" name="yearsKnowledge" id="dos"><label></label>2
+                        <input type="radio" name="yearsKnowledge" id="tres"><label></label>3
+                        <input type="radio" name="yearsKnowledge" id="cuatro"><label></label>4
+                        <input type="radio" name="yearsKnowledge" id="cinco"><label></label>5
+                        <input type="radio" name="yearsKnowledge" id="+cinco"><label></label>+5
+                    </ul>
+                </li>
+                <li>
+                    <label for="desPersonal">Una descripción breve acerca de usted (máximo 300 letras)</label>
+                    <textarea id="desPersonal" maxlength="300" required></textarea>
+                </li>
+
+                <!--Botones Formulario-->
+                <ul>
+                    <li class="btn">
+                        <button type="submit">Enviar Datos Usuario</button>
+                    </li>
+                    <li class="btn">
+                        <button type="submit">Limpiar Datos ingresados</button>
+                    </li>
+                </ul>
+            </ul>
+        </fieldset>
     </form>
 
     <!--JavaScripts-->
