Renombre de clase ts y creación de index ts

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
     </form>
 
     <!--JavaScripts-->
-    <script src="js/inicio.js" async defer></script>
+    <script src="js/Persona.js" async defer></script>
+    <script src="js/index.js" async defer></script>
 </body>
 </html>
