Desarrollo de caja de agradecimiento por rellenar el formulario

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <title>Formulario</title>
     </head>
     <body>
-        <span id="gracias"></span>
+        <div id="gracias">hemos recibido sus datos, pronto nos estaremos comunicando con usted.</div>
         <form id="formBody" method="post" action="#">
             <fieldset>
                 <h3>Formulario Registro</h3>
