--- a/index.html
+++ b/index.html
@@ -22,17 +22,17 @@
 
                     <li>
                         <label for="nameUser">Nombre del Usuario</label>
-                        <input type="text" id="nameUser" >
+                        <input type="text" id="nameUser" required>
                     </li>
                     <li>
                         <label for="lastnameUser">Apellidos del Usuario</label>
-                        <input type="text" id="lastnameUser" >
+                        <input type="text" id="lastnameUser" required>
                     </li>
                     <li>
                         <label for="rutUser">Rut o Run del Usuario + Dígito Verificador</label>
-                        <input type="number" id="rutUser" min="1111111" max="99999999" >
+                        <input type="number" id="rutUser" min="1111111" max="99999999" required>
                         - 
-                        <input type="text" id="dv" maxlength="1" >
+                        <input type="text" id="dv" maxlength="1" required>
                     </li>
                     <li>
                         <label for="emailUser">Email del Usuario</label>
@@ -40,7 +40,7 @@
                     </li>
                     <li>
                         <label for="phoneNumberUser">Número de Celular (Sin +56)</label>
-                        <input type="number" id="phoneNumberUser" min="911111111" max="999999999" >
+                        <input type="number" id="phoneNumberUser" min="911111111" max="999999999" required>
                     </li>
 
                     <!--Selecciones Formulario-->
@@ -49,7 +49,7 @@
                         <label for="langProgramming">Selecciona 1 o más lenguajes de programación de su interés</label>
                         <ul>
                             <br>
-                            <li><input type="checkbox" name="langProgramming" id="python" ><label> Python</label></li>
+                            <li><input type="checkbox" name="langProgramming" id="python" required><label> Python</label></li>
                             <li><input type="checkbox" name="langProgramming" id="java"><label> Java</label></li>
                             <li><input type="checkbox" name="langProgramming" id="type"><label> TypeScript</label></li>
                             <li><input type="checkbox" name="langProgramming" id="php"><label> PHP</label></li>
@@ -80,7 +80,7 @@
                     <li>
                         <label for="yearsKnowledge">¿Cuantos años de experiencia laboral tiene?</label>
                         <ul>
-                            <input type="radio" name="yearsKnowledge" id="uno" ><label></label>1
+                            <input type="radio" name="yearsKnowledge" id="uno" required><label></label>1
                             <input type="radio" name="yearsKnowledge" id="dos"><label></label>2
                             <input type="radio" name="yearsKnowledge" id="tres"><label></label>3
                             <input type="radio" name="yearsKnowledge" id="cuatro"><label></label>4
